(env
 (dev
  (flags
   (:standard -warn-error -27))))

(library
 (name JGS_lib)
 (modules CT_of_json test_of_json JGS JGS2 JGS_Helpers MutableTypeTable)
 (libraries GT OCanren noCanren.Option noCanren.List yojson ocamlgraph str)
 (flags (-rectypes))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   ppx_yojson_conv
   ppx_expect
   GT.ppx_all)))

(rule
 (targets JGS.ml)
 (deps
  (:input JGS.noc.ml)
  (package noCanren))
 (action
  (run
   sh
   -c
   "noCanren -w -8 %{input} -I `ocamlfind -query OCanren` -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
